# dft2dxf

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/ckad-reader/: Cargo.toml
crates/ckad-reader/src/: cam.rs  error.rs  format.rs  lib.rs  metadata.rs  parser.rs  style.rs
crates/ckad-reader/tests/: format.rs  golden.rs  local_fixture.rs
crates/dft-reader/: Cargo.toml
crates/dft-reader/src/: cfb.rs  decompress.rs  document.rs  error.rs  lib.rs  limits.rs  metadata.rs  sheet.rs  storage.rs
crates/dft-reader/tests/: decompression.rs  extraction.rs  limits.rs  metadata.rs  multi_sheet.rs  real_fixture.rs
crates/dft2dxf-cli/: Cargo.toml
crates/dft2dxf-cli/src/: lib.rs  main.rs  output.rs
crates/dft2dxf-cli/tests/: cli.rs
crates/dft2dxf-core/: Cargo.toml
crates/dft2dxf-core/src/: convert.rs  error.rs  inspect.rs  lib.rs  validate.rs
crates/dft2dxf-core/tests/: convert.rs  inspect_validate.rs
crates/dft2dxf-sidecar/: Cargo.toml
crates/dft2dxf-sidecar/src/: lib.rs  main.rs  routes.rs  state.rs
crates/dft2dxf-sidecar/tests/: http.rs  serve.rs
crates/dft2dxf-testkit/: Cargo.toml
crates/dft2dxf-testkit/src/: cnckad_fixture.rs  dft_fixture.rs  emf_fixture.rs  fixture_paths.rs  lib.rs  malformed_fixture.rs
crates/drawing-dxf/: Cargo.toml
crates/drawing-dxf/src/: error.rs  lib.rs  writer.rs
crates/drawing-dxf/tests/: fixtures.rs  golden.rs  writer.rs
crates/drawing-ir/: Cargo.toml
crates/drawing-ir/src/: cam.rs  diagnostic.rs  drawing.rs  entity.rs  geometry.rs  lib.rs  metadata.rs  style.rs
crates/drawing-ir/tests/: diagnostic.rs  geometry.rs  serde_roundtrip.rs
crates/drawing-svg/: Cargo.toml
crates/drawing-svg/src/: error.rs  lib.rs  writer.rs
crates/drawing-svg/tests/: fixtures.rs  golden.rs
crates/emf-reader/: Cargo.toml
crates/emf-reader/src/: error.rs  header.rs  lib.rs  parser.rs  record.rs  replay.rs
crates/emf-reader/tests/: categories.rs  header.rs  malformed.rs  pipeline.rs  replay.rs  replay_extended.rs
deploy/: Dockerfile  docker-compose.yml
docs/: IMPLEMENTATION-STATUS.md  RELEASE.md  ROADMAP.md  architecture.md  backend-integration.md  cnckad-format.md  dft-format-research.md  dxf-mapping.md  emf-support-matrix.md  ir-schema.md  limitations.md  security-model.md  test-fixtures.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dft_metadata.rs  fuzz_emf_records.rs  fuzz_zlib_decompress.rs
scripts/: check-safe-rust.ps1  check-safe-rust.sh  coverage.sh
tests/fixtures/dimensions/: .gitkeep
tests/fixtures/edge-cases/: .gitkeep
tests/fixtures/hatches/: .gitkeep
tests/fixtures/malformed/: .gitkeep
tests/fixtures/multi-sheet/: .gitkeep
tests/fixtures/raster-content/: .gitkeep
tests/fixtures/text/: .gitkeep
tests/fixtures/transforms/: .gitkeep
tests/fixtures/valid/: .gitkeep  INTAKE.md  PROVENANCE.md
tests/fixtures/valid/ci/: README.md  minimal_cnckad.dft  minimal_solid_edge.dft
tests/golden/dxf/: .gitkeep
tests/golden/svg/: .gitkeep  golden__line.snap  golden__moveto_lineto.snap  golden__path.snap  golden__polygon.snap  golden__polyline.snap  golden__rectangle.snap  golden__text.snap  line.snap  path.snap
