[workspace]
resolver = "2"
members = [
  "crates/ckad-reader",
  "crates/dft2dxf-cli",
  "crates/dft2dxf-core",
  "crates/dft2dxf-sidecar",
  "crates/dft-reader",
  "crates/emf-reader",
  "crates/drawing-ir",
  "crates/drawing-svg",
  "crates/drawing-dxf",
  "crates/dft2dxf-testkit",
]

exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
authors = ["dft2dxf contributors"]
repository = "https://github.com/dft2dxf/dft2dxf"

[workspace.dependencies]
cfb = "0.14"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
svg = "0.18"
dxf = "0.6"
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"
http-body-util = "0.1"

dft-reader = { version = "0.1.0", path = "crates/dft-reader" }
emf-reader = { version = "0.1.0", path = "crates/emf-reader" }
drawing-ir = { version = "0.1.0", path = "crates/drawing-ir" }
drawing-svg = { version = "0.1.0", path = "crates/drawing-svg" }
drawing-dxf = { version = "0.1.0", path = "crates/drawing-dxf" }
dft2dxf-testkit = { version = "0.1.0", path = "crates/dft2dxf-testkit" }
dft2dxf-core = { version = "0.1.0", path = "crates/dft2dxf-core" }
ckad-reader = { version = "0.1.0", path = "crates/ckad-reader" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
