[package]
name = "dft2dxf-cli"
description = "CLI for converting Solid Edge .dft files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "dft2dxf_cli"
path = "src/lib.rs"

[[bin]]
name = "dft2dxf"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ckad-reader = { workspace = true }
dft-reader = { workspace = true }
dft2dxf-testkit = { workspace = true }
dft2dxf-core = { workspace = true }
drawing-dxf = { workspace = true }
drawing-ir = { workspace = true }
drawing-svg = { workspace = true }
emf-reader = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
ckad-reader = { workspace = true }
dft2dxf-testkit = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
dft2dxf-core = { workspace = true }

[lints]
workspace = true
