[package]
name = "dft2dxf-testkit"
description = "Synthetic fixtures and helpers for dft2dxf tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cfb = { workspace = true }
flate2 = { workspace = true }
drawing-ir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
